[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/start_menu/StartScene.gd" type="Script" id=1]

[node name="StartScene" type="Node2D"]
script = ExtResource( 1 )

[node name="NewGame" type="ColorRect" parent="."]
margin_left = 521.0
margin_top = 276.0
margin_right = 676.0
margin_bottom = 330.0

[node name="Label" type="Label" parent="NewGame"]
margin_left = 38.0
margin_top = 22.0
margin_right = 126.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New Game"

[node name="QuitGame" type="ColorRect" parent="."]
margin_left = 266.0
margin_top = 277.0
margin_right = 421.0
margin_bottom = 331.0

[node name="Label" type="Label" parent="QuitGame"]
margin_left = 43.0
margin_top = 21.0
margin_right = 113.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit Game"

[node name="Label" type="Label" parent="."]
margin_left = 367.0
margin_top = 186.0
margin_right = 570.0
margin_bottom = 258.0
text = "LD51-TD"
align = 1
valign = 1

[connection signal="gui_input" from="NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="mouse_entered" from="NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="mouse_entered" from="QuitGame" to="." method="_on_QuitGame_mouse_entered"]
[connection signal="mouse_exited" from="QuitGame" to="." method="_on_QuitGame_mouse_exited"]
